<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText android:id="@+id/smbHost"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:hint="@string/smb_host_hint" android:inputType="textUri" />

        <EditText android:id="@+id/smbShare"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:hint="@string/smb_share_hint" android:inputType="text" />

        <EditText android:id="@+id/smbPath"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:hint="@string/smb_path_hint" android:inputType="text" />

        <EditText android:id="@+id/smbUser"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:hint="@string/smb_user_hint" android:inputType="text" />

        <EditText android:id="@+id/smbPass"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:hint="@string/smb_pass_hint" android:inputType="textPassword" />

        <EditText android:id="@+id/smbDomain"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:hint="@string/smb_domain_hint" android:inputType="text" />

        <Button android:id="@+id/smbConnect"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/connect" />
    </LinearLayout>
</ScrollView>
