<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        app:key="reading_direction"
        app:title="@string/pref_dir_title"
        app:entries="@array/dir_entries"
        app:entryValues="@array/dir_values"
        app:defaultValue="rtl"
        app:useSimpleSummaryProvider="true" />

    <ListPreference
        app:key="spread_mode"
        app:title="@string/pref_spread_title"
        app:entries="@array/spread_entries"
        app:entryValues="@array/spread_values"
        app:defaultValue="auto"
        app:useSimpleSummaryProvider="true" />

    <SwitchPreferenceCompat
        app:key="fold_flip"
        app:title="@string/pref_fold_title"
        app:summary="@string/pref_fold_summary"
        app:defaultValue="false" />
</PreferenceScreen>
