<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp">

    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:paddingBottom="24dp"
        android:gravity="center" />

    <Button
        android:id="@+id/openBtn"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/open_local" />

    <Button
        android:id="@+id/smbBtn"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/open_smb" />

    <Button
        android:id="@+id/driveBtn"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/open_drive" />

    <Button
        android:id="@+id/settingsBtn"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/settings" />
</LinearLayout>
